# cppl_5

HW1/: CMakeLists.txt  HW1.cpp  Template.h
HW2/: CMakeLists.txt  HW2.cpp  HW2.h
HW3/: CMakeLists.txt  HW3.cpp
